--- a/HeavenofBooksWeb/Areas/Admin/Views/Category/Create.cshtml
+++ b/HeavenofBooksWeb/Areas/Admin/Views/Category/Create.cshtml
@@ -1,8 +1,11 @@
 ﻿@model Category
+@{
+    ViewData["Title"] = "Create";
+}
 <form method="post">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Edit Category</h2>
+            <h2 class="text-primary">Create Category</h2>
             <hr />
         </div>
         <div class="mb-3">
@@ -16,14 +19,15 @@
             <span asp-validation-for="DisplayOrder" class="text-danger"></span>
 
         </div>
-        <button type="submit" class="btn btn-primary" style="width:150px">Edit</button>
+        <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
         <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Go back</a>
+        <div aasp-validation-summary="all" class="text-danger"></div>
     </div>
 
 </form>
 
 @section scripts{
     @{
-        <partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial" />
     }
 }
