--- a/HeavenofBooksWeb/Areas/Admin/Views/Category/Delete.cshtml
+++ b/HeavenofBooksWeb/Areas/Admin/Views/Category/Delete.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Category
+@{
+    ViewData["Title"] = "Delete";
+}
 <form method="post">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
