--- a/HeavenofBooksWeb/Areas/Admin/Views/CoverType/Index.cshtml
+++ b/HeavenofBooksWeb/Areas/Admin/Views/CoverType/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Category>
+﻿@model IEnumerable<CoverType>
 @{
     ViewData["Title"] = "Index";
 }
@@ -11,8 +11,8 @@
             <h2 class="text-primary">Category List</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
-                <i class="bi bi-clipboard-plus"></i> &nbsp; Create new category</a>
+            <a asp-controller="CoverType" asp-action="Create" class="btn btn-primary">
+                <i class="bi bi-clipboard-plus"></i> &nbsp; Create new CoverType</a>
         </div>
     </div>
     <br />
@@ -21,33 +21,29 @@
     <thead>
         <tr>
             <th>
-                Category Name
+                CoverType Name
             </th>
-            <th>
-                Display Order
-            </th>
+            
             <th class="w-25">
                 Operations
             </th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var category in Model)
+        @foreach (var coverType in Model)
         {
             <tr>
                 <th>
-                    @category.Name
+                    @coverType.Name
                 </th>
-                <th>
-                    @category.DisplayOrder
-                </th>
+                
                 <th>
                     <div class="w-25 btn-group" role="group">
-                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@category.Id"
+                        <a asp-controller="CoverType" asp-action="Edit" asp-route-id="@coverType.Id"
                         class="btn btn-primary mx-1"><i class="bi bi-pen"></i> Edit</a>
                     </div>
                     <div class="w-25 btn-group" role="group">
-                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id"
+                        <a asp-controller="CoverType" asp-action="Delete" asp-route-id="@coverType.Id"
                         class="btn btn-danger mx-1"><i class="bi bi-trash"></i> Delete</a>
                     </div>
                 </th>
