--- a/HeavenofBooksWeb/Views/Shared/_Layout.cshtml
+++ b/HeavenofBooksWeb/Views/Shared/_Layout.cshtml
@@ -21,10 +21,15 @@
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>        
+          <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>        
         </li>
-        <li class="nav-item">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin System</a>
+          <div class="dropdown-menu">
           <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+          <a class="nav-link" asp-area="Admin" asp-controller="CoverType" asp-action="Index">CoverType</a>
+            <div class="dropdown-divider"></div>
+          </div>
         </li>
       </ul>
       <form class="d-flex">
