--- a/HeavenofBooksWeb/Views/Shared/_Layout.cshtml
+++ b/HeavenofBooksWeb/Views/Shared/_Layout.cshtml
@@ -19,18 +19,20 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor02">
-      <ul class="navbar-nav me-auto">
+       <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>        
         </li>
-        <li class="nav-item dropdown">
+         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin System</a>
           <div class="dropdown-menu">
-          <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-          <a class="nav-link" asp-area="Admin" asp-controller="CoverType" asp-action="Index">CoverType</a>
+             <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+          <a class="dropdown-item" asp-area="Admin" asp-controller="CoverType" asp-action="Index">CoverType</a>
+          <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
             <div class="dropdown-divider"></div>
-          </div>
-        </li>
+            <a class="dropdown-item" href="#">Separated link</a>
+          </div>    
+          </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-sm-2" type="text" placeholder="Search">
@@ -38,7 +40,7 @@
       </form>
     </div>
   </div>
-</nav> 
+</nav>
     </header>
     <div class="container">
         <main role="main" class="pb-3">
