--- a/HeavenofBooksWeb/Areas/Customer/Views/Home/Index.cshtml
+++ b/HeavenofBooksWeb/Areas/Customer/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                     <div>
-                        <a asp-action="Details" class="btn btn-dark form-control" asp-route-id="@products.Id">
+                        <a asp-action="Details" class="btn btn-dark form-control" asp-route-productId="@products.Id">
                             Details
                         </a>
                     </div>
