--- a/HeavenofBooksWeb/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/HeavenofBooksWeb/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,4 +1,6 @@
 ﻿@model HeavenofBooks.Models.ViewModels.ShoppingCartVM
+@using Microsoft.Extensions.Options
+@inject IOptions<HeavenofBooks.Utility.StripeSettings> Stripe
 <form method="post">
 	<br />
 	<div class="container">
