--- a/HeavenofBooksWeb/Views/Shared/_Layout.cshtml
+++ b/HeavenofBooksWeb/Views/Shared/_Layout.cshtml
@@ -28,12 +28,14 @@
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">AdminSys</a>
           <div class="dropdown-menu">
            <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-          <a class="dropdown-item" asp-area="Admin" asp-controller="CoverType" asp-action="Index">CoverType</a>
-          <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
-         
+           <a class="dropdown-item" asp-area="Admin" asp-controller="CoverType" asp-action="Index">CoverType</a>
+           <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>          
             <div class="dropdown-divider"></div>
-             <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
+            <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
           </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Order</a>  
         </li>
         <li class="nav-item">
             <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="Index">
