some updates gece gece

--- a/HeavenofBooksWeb/Areas/Admin/Views/Order/Index.cshtml
+++ b/HeavenofBooksWeb/Areas/Admin/Views/Order/Index.cshtml
@@ -56,7 +56,7 @@
             </a>
             <a style="text-decoration:none;" asp-controller="Order" 
               asp-action="Index" asp-route-status="paymentdelayed">
-              <li class="list-group-item @paymentdelayed">Payment Pending</li>
+              <li class="list-group-item @paymentdelayed>Payment Pending</li>
             </a>
             <a style="text-decoration:none;" asp-controller="Order" 
               asp-action="Index" asp-route-status="approved">
