--- a/HeavenofBooksWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/HeavenofBooksWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -1,4 +1,7 @@
-﻿<form method="post">
+﻿@model HeavenofBooks.Models.ViewModels.OrderVM
+@using HeavenofBooks.Utility
+<form method="post">
+	<input asp-for="orderHeader.Id" hidden/>
 	<br />
 	<div class="container">
 		<div class="card">
@@ -22,92 +25,156 @@
 							<div class="row my-1">
 								<div class="col-3">Name</div>
 								<div class="col-9">
-									<input type="text" class="form-control" />
+									@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+									{
+										<input asp-for="orderHeader.Name" type="text" class="form-control" />
+										<span asp-validation-for="orderHeader.Name" class="text-danger"></span>
+									}else{
+										<input asp-for="orderHeader.Name" readonly type="text" class="form-control" />
+									}
+									
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">Phone</div>
 								<div class="col-9">
-									<input type="text" class="form-control" />
+									@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+									{
+										<input asp-for="orderHeader.PhoneNumber" type="text" class="form-control" />
+										<span asp-validation-for="orderHeader.PhoneNumber" class="text-danger"></span>
+									}else{
+										<input asp-for="orderHeader.PhoneNumber" readonly type="text" class="form-control" />
+									}
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">Address</div>
 								<div class="col-9">
-									<input type="text" class="form-control" />
+									@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+									{
+										<input asp-for="orderHeader.StreetAddress" type="text" class="form-control" />
+										<span asp-validation-for="orderHeader.StreetAddress" class="text-danger"></span>
+									}else{
+										<input asp-for="orderHeader.StreetAddress" readonly type="text" class="form-control" />
+									}
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">City</div>
 								<div class="col-9">
-									<input type="text" class="form-control" />
+									@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+									{
+										<input asp-for="orderHeader.City" type="text" class="form-control" />
+										<span asp-validation-for="orderHeader.City" class="text-danger"></span>
+									}else{
+										<input asp-for="orderHeader.City" readonly type="text" class="form-control" />
+									}
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">State</div>
 								<div class="col-9">
-									<input type="text" class="form-control" />
+									@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+									{
+										<input asp-for="orderHeader.State" type="text" class="form-control" />
+										<span asp-validation-for="orderHeader.State" class="text-danger"></span>
+									}else{
+										<input asp-for="orderHeader.State" readonly type="text" class="form-control" />
+									}
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">Zip Code</div>
 								<div class="col-9">
-									<input type="text" class="form-control" />
+									@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+									{
+										<input asp-for="orderHeader.PostalCode" type="text" class="form-control" />
+										<span asp-validation-for="orderHeader.PostalCode" class="text-danger"></span>
+									}else{
+										<input asp-for="orderHeader.PostalCode" readonly type="text" class="form-control" />
+									}
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">Email</div>
 								<div class="col-9">
-									<input type="text" class="form-control" readonly />
+										<input asp-for="orderHeader.State" readonly type="text" class="form-control" />									
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">Order Date</div>
 								<div class="col-9">
-									<input type="text" class="form-control" readonly />
+									<input value="@Model.orderHeader.OrderDate.ToShortDateString()" type="text" class="form-control" readonly />
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">Carrier</div>
 								<div class="col-9">
-									<input type="text" class="form-control" />
+									@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+									{
+										<input asp-for="orderHeader.Carrier" id="carrier" type="text" class="form-control" />
+									}else{
+										<input asp-for="orderHeader.Carrier" readonly type="text" class="form-control" />
+									}
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">Tracking</div>
 								<div class="col-9">
-									<input type="text" class="form-control" />
+									@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+									{
+										<input asp-for="orderHeader.TrackingNumber" id="trackingNumber" type="text" class="form-control" />
+									}else{
+										<input asp-for="orderHeader.TrackingNumber" readonly type="text" class="form-control" />
+									}
 								</div>
 							</div>
 							<div class="row my-1">
 								<div class="col-3">Shipping Date</div>
 								<div class="col-9">
-									<input id="shippingDate" type="text" readonly class="form-control" />
+									<input value="@Model.orderHeader.ShippingDate.ToShortDateString()" type="text" readonly class="form-control" />
 								</div>
 							</div>
+							@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+							{
 							<div class="row my-1">
-								<div class="col-3">Transaction ID</div>
+								<div class="col-3">Session ID</div>
 								<div class="col-9">
-									<input type="text" readonly class="form-control" />
+									<input asp-for="orderHeader.SessionId" type="text" readonly class="form-control" />
 								</div>
 							</div>
 							<div class="row my-1">
+								<div class="col-3">Payment Intent ID</div>
+								<div class="col-9">
+									<input asp-for="orderHeader.PaymentIntentId" type="text" readonly class="form-control" />
+								</div>
+							</div>
+							}
+							<div class="row my-1">
+								@if (Model.orderHeader.SessionId == null)
+								{							
 								<div class="col-3">Payment Due Date</div>
 								<div class="col-9">
-									<input readonly class="form-control" />
-								</div>
+									<input value="@Model.orderHeader.PaymentDueDate.ToShortDateString()"
+									readonly class="form-control" />
+									</div>
+								}
+								else
+								{
 								<div class="col-3">Payment Date</div>
 								<div class="col-9">
-									<input readonly class="form-control" />
+									<input value="@Model.orderHeader.PaymentDate.ToShortDateString()"
+									readonly class="form-control" />
 								</div>
+								}
 							</div>
 							<div class="row my-1">
 								<div class="col-3">Payment Status</div>
 								<div class="col-9">
-									<input type="text" readonly class="form-control" />
+									<input asp-for="orderHeader.PaymentStatus" type="text" readonly class="form-control" />
 								</div>
 							</div>
-							<input type="submit" class="btn btn-warning form-control my-1" value="Update Order Details" />
+							<input type="submit" asp-action="UpdateOrderDetail" class="btn btn-warning form-control my-1" value="Update Order Details" />
 
 
 						</div>
@@ -115,39 +182,62 @@
 							<h4 class="d-flex justify-content-between align-items-center mb-3">
 								<span class="text-primary">Order Summary</span>
 							</h4>
-							<label class="btn btn-outline-primary form-control my-2">Order Status - OrderStatus</label>
+							<label class="btn btn-outline-primary form-control my-2">Order Status - @Model.orderHeader.OrderStatus</label>
 
 							<ul class="list-group mb-3">
+								@foreach (var details in Model.orderDetail)
+								{
+									
+								
 								<li class="list-group-item d-flex justify-content-between p-2">
 									<div class="row container">
 										<div class="col-8">
 
-											<h6 class="my-0 text-primary">Product.Title</h6>
-											<small class="text-muted">Price : Price</small><br />
-											<small class="text-muted">Quantity : Count</small>
+											<h6 class="my-0 text-primary">@details.product.Title</h6>
+											<small class="text-muted">Price : @details.Price</small><br />
+											<small class="text-muted">Quantity : @details.Count</small>
 										</div>
 										<div class="col-4">
-											<p class="text-success">count * price</p>
+											<p class="text-end text-success">@((details.Count * details.Price).ToString("c"))</p>
 										</div>
 									</div>
 								</li>
-
+								}
 								<li class="list-group-item bg-info">
 									<div class="row container">
 										<div class="col-6">
 											<h5 class="text-white">TOTAL </h5>
 										</div>
-										<div class="col-6 text-right">
-											<h5 class="text-white">$$$</h5>
+										<div class="col-6 text-end">
+											<h5 class="text-white">@Model.orderHeader.OrderTotal.ToString("c")</h5>
 										</div>
 									</div>
 								</li>
 							</ul>
+							@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
+							{
+								if (Model.orderHeader.OrderStatus == StaticDetails.StatusApproved)
+								{
+							      	<input asp-action="StartProcessing" type="submit" class="btn btn-primary form-control my-1" value="Start Processing" />
+								}
+								if (Model.orderHeader.OrderStatus == StaticDetails.StatusInProcess)
+								{
+							      	<input asp-action="ShipOrder" onclick="return ValidateInput()"
+									  type="submit" class="btn btn-primary form-control my-1" value="Ship Order" />
+								}
+								if (Model.orderHeader.OrderStatus == StaticDetails.StatusShipped &&
+								Model.orderHeader.PaymentStatus == StaticDetails.PaymentStatusDelayedPayment)
+								{
+									<input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
+								}
+								if (Model.orderHeader.OrderStatus != StaticDetails.StatusRefunded &&
+								Model.orderHeader.OrderStatus != StaticDetails.StatusCancelled)
+								{
+									<input asp-action="CancelOrder" type="submit" class="btn btn-danger form-control my-1" value="Cancel Order" />
+								}
 
-							<input type="submit" class="btn btn-primary form-control my-1" value="Start Processing" />
-							<input type="submit" class="btn btn-primary form-control my-1" value="Ship Order" />
-							<input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
-							<input type="submit" class="btn btn-danger form-control my-1" value="Cancel Order" />
+							
+							}
 						</div>
 					</div>
 				</div>
@@ -155,4 +245,27 @@
 		</div>
 	</div>
 </form>
-
+@section Scripts{
+	<partial name="_ValidationScriptsPartial" />
+	<script>
+		 function ValidateInput(){
+            if (document.getElementById("trackingNumber").value == "") {
+                Swal.fire({
+  icon: 'error',
+  title: 'Oops...',
+  text: 'Please enter tracking number!',
+})
+                return false;
+            }
+			if (document.getElementById("carrier").value == "") {
+                Swal.fire({
+  icon: 'error',
+  title: 'Oops...',
+  text: 'Please enter carrier!',
+})
+                return false;
+            }
+            return true;
+        }
+	</script>
+}
