--- a/HeavenofBooksWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/HeavenofBooksWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -5,12 +5,14 @@
 	<br />
 	<div class="container">
 		<div class="card">
-			<div class="card-header bg-dark text-light ml-0 row container">
+			<div class="card-header bg-dark text-light ml-0">
+				<div class="container row">
 				<div class="col-12 d-none d-md-block col-md-6 pb-1">
 					<i class="fas fa-shopping-cart"></i> &nbsp; Order Summary
 				</div>
 				<div class="col-12 col-md-4 offset-md-2 text-right">
-					<a class="btn btn-outline-info form-control btn-sm">Back to Orders</a>
+					<a asp-action="Index" class="btn btn-outline-info form-control btn-sm">Back to Orders</a>
+				</div>
 				</div>
 			</div>
 			<div class="card-body">
@@ -98,7 +100,7 @@
 							<div class="row my-1">
 								<div class="col-3">Email</div>
 								<div class="col-9">
-										<input asp-for="orderHeader.State" readonly type="text" class="form-control" />									
+										<input asp-for="orderHeader.appUser.Email" readonly type="text" class="form-control" />									
 								</div>
 							</div>
 							<div class="row my-1">
@@ -214,6 +216,11 @@
 									</div>
 								</li>
 							</ul>
+							@if (Model.orderHeader.OrderStatus == StaticDetails.StatusShipped &&
+								Model.orderHeader.PaymentStatus == StaticDetails.PaymentStatusDelayedPayment)
+								{
+									<input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
+								}
 							@if (User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee))
 							{
 								if (Model.orderHeader.OrderStatus == StaticDetails.StatusApproved)
@@ -224,14 +231,10 @@
 								{
 							      	<input asp-action="ShipOrder" onclick="return ValidateInput()"
 									  type="submit" class="btn btn-primary form-control my-1" value="Ship Order" />
-								}
-								if (Model.orderHeader.OrderStatus == StaticDetails.StatusShipped &&
-								Model.orderHeader.PaymentStatus == StaticDetails.PaymentStatusDelayedPayment)
-								{
-									<input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
-								}
+								}								
 								if (Model.orderHeader.OrderStatus != StaticDetails.StatusRefunded &&
-								Model.orderHeader.OrderStatus != StaticDetails.StatusCancelled)
+								Model.orderHeader.OrderStatus != StaticDetails.StatusCancelled &&
+								Model.orderHeader.OrderStatus != StaticDetails.StatusShipped)
 								{
 									<input asp-action="CancelOrder" type="submit" class="btn btn-danger form-control my-1" value="Cancel Order" />
 								}
