--- a/HeavenofBooksWeb/Views/Shared/_Layout.cshtml
+++ b/HeavenofBooksWeb/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using HeavenofBooks.Utility
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -24,16 +25,27 @@
         <li class="nav-item">
           <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>  
         </li>
+        @if(User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee)
+        || User.IsInRole(StaticDetails.Role_User_Company)){
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">AdminSys</a>
           <div class="dropdown-menu">
+              @if(User.IsInRole(StaticDetails.Role_Admin)){
            <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+           <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
+           }
+          @if(User.IsInRole(StaticDetails.Role_Admin) || User.IsInRole(StaticDetails.Role_Employee)
+        || User.IsInRole(StaticDetails.Role_User_Company) ){
            <a class="dropdown-item" asp-area="Admin" asp-controller="CoverType" asp-action="Index">CoverType</a>
-           <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>          
+              
+           
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" asp-area="Admin" asp-controller="Company" asp-action="Index">Company</a>
+            <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a> 
+            }
           </div>
+
         </li>
+        }
         <li class="nav-item">
           <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Order</a>  
         </li>
