--- a/HeavenofBooksWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/HeavenofBooksWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,9 +1,13 @@
 ﻿@page
+@using HeavenofBooks.Utility
 @model RegisterModel
 @{
     ViewData["Title"] = "Register";
 }
-
+@if (User.IsInRole(StaticDetails.Role_Admin))
+{
+    <h1 class="pt-4">Register - ADMIN PORTAL</h1>
+}
 <h1 class="pt-4">@ViewData["Title"]</h1>
 
 <div class="row pt-4">
@@ -17,12 +21,12 @@
                 <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-             <div class="form-floating py-2 col-6">
+
+            <div class="form-floating py-2 col-6">
                 <input asp-for="Input.Name" class="form-control" aria-required="true" />
                 <label asp-for="Input.Name"></label>
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
-            
             <div class="form-floating py-2 col-6">
                 <input asp-for="Input.StreetAddress" class="form-control" aria-required="true" />
                 <label asp-for="Input.StreetAddress"></label>
@@ -54,60 +58,68 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            @if (User.IsInRole(StaticDetails.Role_Admin))
+            {
+                <div class="form-floating py-2 col-6">
+                    <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-control">
+                        <option selected disabled>
+                            --Select Role--
+                        </option>
+                    </select>
+                </div>
+            }
             <div class="form-floating py-2 col-6">
-                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-control" >
-                <option selected disabled>
-                    --Select Role--
-                </option>
-            </select>
-            </div>
-            <div class="form-floating py-2 col-6">
-                <select asp-for="Input.CompanyID" style="display:none;" asp-items="@Model.Input.CompanyList" class="form-control" >
-                <option selected disabled>
-                    --Select Company--
-                </option>
-            </select>
+                <select asp-for="Input.CompanyID" style="display:none;" asp-items="@Model.Input.CompanyList" class="form-control">
+                    <option selected disabled>
+                        --Select Company--
+                    </option>
+                </select>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-5">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                                    <div>
-                                        <p>
-                                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                                            about setting up this ASP.NET application to support logging in via external services</a>.
-                                        </p>
-                                    </div>
+    @if (!User.IsInRole(StaticDetails.Role_Admin))
+    {
+        <div class="col-md-5">
+            <section>
+                <h3>Use another service to register.</h3>
+                <hr />
+                @{
+                    if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                    {
+                        <div>
+                            <p>
+                                There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                    article
+                                    about setting up this ASP.NET application to support logging in via external services
+                                </a>.
+                            </p>
+                        </div>
+                    }
+                    else
+                    {
+                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                            <div>
+                                <p>
+                                    @foreach (var provider in Model.ExternalLogins)
+                                    {
+                                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    }
+                                </p>
+                            </div>
+                        </form>
+                    }
                 }
-                else
-                {
-                                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                                        <div>
-                                            <p>
-                                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                                            </p>
-                                        </div>
-                                    </form>
-                }
-            }
-        </section>
-    </div>
+            </section>
+        </div>
+    }
 </div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
     <script>
-        $(document).ready(function(){
-            $('#Input_Role').change(function(){
+        $(document).ready(function() {
+            $('#Input_Role').change(function() {
                 var selection = $('#Input_Role Option:Selected').text();
                 if (selection != 'Company') {
                     $('#Input_CompanyID').hide();
